Bug 506169 - Error message still refers to deleted Advanced Settings UI in kategdbplugin
Summary: Error message still refers to deleted Advanced Settings UI in kategdbplugin
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: 25.04.2
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-06-25 16:11 UTC by Ben Morris
Modified: 2025-06-29 16:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ben Morris 2025-06-25 16:11:35 UTC
Under certain circumstances, the debug plugin still pops up a message saying "Try adding a search path to Advanced Settings -> Source file search paths":
https://invent.kde.org/utilities/kate/-/blob/00a170e9/addons/gdbplugin/plugin_kategdb.cpp#L248

However, the UI it references appears to have been completely removed:
https://invent.kde.org/utilities/kate/-/commit/78adb20c
Comment 1 Christoph Cullmann 2025-06-29 16:22:00 UTC
Git commit b66ba2ed072d3646d50b72d2a7ced010795a0994 by Christoph Cullmann.
Committed on 29/06/2025 at 16:21.
Pushed by cullmann into branch 'master'.

remove hint to no longer existing config page

M  +1    -4    addons/gdbplugin/plugin_kategdb.cpp

https://invent.kde.org/utilities/kate/-/commit/b66ba2ed072d3646d50b72d2a7ced010795a0994
Comment 2 Christoph Cullmann 2025-06-29 16:23:26 UTC
Good catch, better no hint instead of a wrong one.