remove hint to no longer existing config page

BUG: 506169